<resources>
    <string name="app_name">Composition</string>
    <string name="app_title">Состав числа</string>
    <string name="cd_math_icon">Math icon</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="game_rules">Правила игры: перед вами будет три фигуры, две снизу и одна сверху, в двух из них будут числа. Необходимо, чтобы сумма чисел из двух нижних фигур была равна числу в верхней фигуре, для этого нужно вставить недостающее число.\n\nПример: в верхнем круге число 7, в одном из нижних знак вопроса, а в другом число 4. Значит на месте вопросительного знака должно быть число 3, потому что 3 + 4 = 7</string>
    <string name="understand">Понятно</string>
    <string name="choose_level">Выберите уровень</string>
    <string name="test_level">Тестовый уровень</string>
    <string name="easy_level">Легкий уровень</string>
    <string name="normal_level">Средний уровень</string>
    <string name="game_over">Game Over</string>
    <string name="score_answers">Ваш счет: %s</string>
    <string name="score_percentage">Процент правильных ответов: %s</string>
    <string name="retry">Попробовать снова</string>
    <string name="right_answers">Правильных ответов %s из %s необходимых</string>
    <string name="required_percentage">Необходимый процент правильных ответов: %s</string>
    <string name="required_score">Необходимое количество правильных ответов: %s</string>
    <string name="question_mark">\?</string>
    <string name="hard_level">Сложный уровень</string>
    <string name="progress_answers">Правильных ответов %s (минимум %s)</string>
</resources>