<?xml version="1.0" encoding="utf-8"?>
<layout>

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:context=".presentation.ChooseLevelFragment">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:gravity="center"
            android:text="@string/choose_level"
            android:textSize="28sp"
            android:textStyle="bold"
            tools:layout_editor_absoluteX="16dp"
            tools:layout_editor_absoluteY="16dp" />

        <Button
            android:id="@+id/button_level_test"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:text="@string/test_level"
            android:textSize="16sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/button_level_easy"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:backgroundTint="@android:color/holo_green_light"
            android:text="@string/easy_level"
            android:textSize="16sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/button_level_normal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:backgroundTint="@android:color/holo_orange_light"
            android:text="@string/normal_level"
            android:textSize="16sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/button_level_hard"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:backgroundTint="@android:color/holo_red_light"
            android:text="@string/hard_level"
            android:textSize="16sp"
            android:textStyle="bold" />
    </LinearLayout>
</layout>